# nspeed

./: AUTHORS  CMakeLists.txt  COPYING  Doxyfile  Makefile.am  Makefile.in  README  aclocal.m4  builddeb.sh  config.h.in  configure  configure.in  fixedpoint3d.kdevelop.pcs  fixedpoint3d.kdevses  ltmain.sh  mkinstalldirs  ngage-game.kdevelop  ngage-game.kdevelop.pcs  ngage-game.kdevses
3D graphics on mobile devices/: article_mobilegfx01.shtml.html  article_mobilegfx02.shtml.html  article_mobilegfx03.shtml.html  article_mobilegfx04.shtml.html
autom4te.cache/: output.0  requests  traces.0
data/: Makefile.am  car.mesh  convtrack.py  logo.xcf  nspeed.desktop  org.unrealvoodoo.nspeed.service  readme.txt  settings.tag  track.trk  track3.pspimage  track3.trk
data/cars/: Makefile.am  default.mesh  default.xcf
data/cars/1/: Makefile.am  car1.3ds  car1.wings  mesh.mesh  texture.xcf
data/cars/2/: Makefile.am  car2.wings  mesh.3ds  mesh.mesh
data/cars/2/src/: texture.xcf
data/cars/3/: Makefile.am  car3.wings  mesh.3ds  mesh.mesh
data/cars/3/src/: texture.xcf
data/cars/4/: Makefile.am  car4.wings  mesh.3ds  mesh.mesh  texture.xcf
data/cars/default/: mesh.mesh
data/fonts/: Makefile.am  big.xcf
data/music/: Makefile.am  cleo.mod  menu.mod  menu.mod.tag
data/sound/: Makefile.am
data/tracks/: Makefile.am
data/tracks/city/: Makefile.am  music.mod  music.mod.tag  track.map  track.trk
data/tracks/desert/: Makefile.am  ground.xcf  music.mod.tag  track.map  track.trk
data/tracks/game/: Makefile.am  times.tag  track.map  track.trk
data/tracks/icetrack/: Makefile.am  ground.xcf  music.mod  music.mod.tag  sky.xcf  times.tag  track.map  track.trk  track.tsp
data/tracks/speedtrack/: Makefile.am  music.mod  music.mod.tag  track.map  track.trk
data/tracks/test/: Makefile.am  track.map  track.trk  track.tsp
debian/: changelog  control  copyright  menu  postinst  rules
msvc/ngage-game/: config.h  ngage-game.sln  ngage-game.vcproj
src/: AutoConfig.h.in  BitmapFont.cpp  BitmapFont.h  Car.cpp  Car.h  Config.h  Engine.cpp  Engine.h  Environment.cpp  Environment.h  FixedPointMath.cpp  FixedPointMath.h  FixedPointMatrix.cpp  FixedPointMatrix.h  FixedPointVector.cpp  FixedPointVector.h  GameEngine.cpp  GameEngine.h  Land.cpp  Land.h  Makefile.am  Makefile.in  Menu.cpp  Menu.h  Mesh.cpp  Mesh.h  MeshSet.cpp  MeshSet.h  Mixer.cpp  Mixer.h  ModPlayer.cpp  ModPlayer.h  Object.cpp  Object.h  Rasterizer.cpp  Rasterizer.h  Renderable.h  Set.h  TagFile.cpp  TagFile.cpp~  (+12 more)
src/3ds2h/: 3ds2h.c  Makefile.am  Makefile.in
src/3ds2mesh/: 3ds2mesh.cpp  Config.h  Makefile.in  TagFile.cpp  TagFile.h
src/engine/: Audio.cpp  Engine.cpp  Engine.h  Makefile.am  Makefile.in  Video.cpp
src/framework/: Makefile.am  Makefile.in
src/framework/sdl/: Makefile.am  Makefile.in  SDLFramework.cpp  SDLFramework.h
src/framework/symbian/: GameApp.cpp  GameApp.h  GameAppUi.cpp  GameAppUi.h  GameContainer.cpp  GameDocument.cpp  GameDocument.h  GameEng.cpp  GameEng.h  Gamecontainer.h  Gameimageloader.h  N-Speed.loc  game.hrh  game.loc  gameimageloader.cpp
src/models/: Alus.h  CarModel.h  Duck.h  Loop.h  car.3ds
symbian/: debugdist.bat  dist.bat
symbian/aif/: Gameaif.rss
symbian/data/: Game.rss  Game_caption.rss  N-Speed.RSS  N-Speed_caption.rss
symbian/group/: Game.mmp  N-Speed.mmp  abld.bat  bld.inf  config.h
symbian/install/: Car1.SIS  Car1.pkg  Car2.SIS  Car2.pkg  Car3.SIS  Car3.pkg  Car4.SIS  Car4.pkg  DesertTrack.SIS  DesertTrack.pkg  Game.SIS  Game.pkg  Gametrack.SIS  Icetrack.SIS  Icetrack.pkg  N-Speed-debug.pkg  N-Speed.SIS  N-Speed.pkg  Testtrack.SIS  Testtrack.pkg
templates/: h
tools/: Makefile.am  makefont.py  makemesh.py  maketrack.py  tagfile.py
tools/3ds2h/: 3ds2h.c  Makefile.in
tools/3ds2mesh/: Config.h  Makefile.am  Makefile.in  TagFile.h
tools/Dice3DS/: GL.py  __init__.py  basicmodel.py  dom3ds.py  loadmodel.py  loadtexture.py
tools/pyft/: Makefile  Setup.w32  freetype.i  freetype.py  freetype_inc.py  freetype_wrap.c
unix/: Config.h
