#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(nspeed, 1.1, sami.kyostila@gmail.com)
AM_INIT_AUTOMAKE(nspeed, 1.1)
AC_CONFIG_SRCDIR([src/AutoConfig.h.in])
AC_CONFIG_HEADER([src/AutoConfig.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_LIBTOOL

# Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_REALLOC
AC_FUNC_STAT
AC_CHECK_FUNCS([memchr memmove memset])
AC_CHECK_LIB([SDL_image], [IMG_Load])
AC_CHECK_LIB([z], [compress])
AC_CHECK_LIB([Xsp], [XSPSetPixelDoubling])
AC_CHECK_LIB([X11], [XStoreName])
AM_PATH_SDL(1.2.0, , exit)

# C++
AC_LANG_CPLUSPLUS

AC_CONFIG_FILES([Makefile
                 src/Makefile
                 src/engine/Makefile
                 src/framework/Makefile
                 src/framework/sdl/Makefile
                 data/cars/1/Makefile data/cars/2/Makefile data/cars/3/Makefile data/cars/4/Makefile
                 data/cars/Makefile data/fonts/Makefile data/Makefile data/music/Makefile
                 data/sound/Makefile data/tracks/city/Makefile data/tracks/desert/Makefile
                 data/tracks/game/Makefile data/tracks/icetrack/Makefile data/tracks/Makefile
                 data/tracks/speedtrack/Makefile data/tracks/test/Makefile
                 ])
AC_OUTPUT
