SUBDIRS = fonts sound cars tracks music

pkgdatadir = $(datadir)/games/@PACKAGE@
pkgdata_DATA = reddot.png bluedot.png logo.png readme.txt
EXTRA_DIST = $(pkgdata_DATA)

pkgdatadir = $(datadir)/icons
pkgdata_DATA = nspeed.png
EXTRA_DIST = $(pkgdata_DATA)

pkgdatadir = $(datadir)/applications
pkgdata_DATA = nspeed.desktop
EXTRA_DIST = $(pkgdata_DATA)

