SUBDIRS = fonts sound cars tracks music

pkgdatadir = $(datadir)/games/@PACKAGE@
pkgdata_DATA = reddot.png bluedot.png logo.png readme.txt

icondatadir = $(datadir)/icons
icondata_DATA = nspeed.png

desktopdatadir = $(datadir)/applications
desktopdata_DATA = nspeed.desktop

EXTRA_DIST = $(pkgdata_DATA) $(icondata_DATA) $(desktopdata_DATA) nspeed26.png nspeed40.png nspeed64.png org.unrealvoodoo.nspeed.service
