pkgdatadir = $(datadir)/games/@PACKAGE@/tracks/city
pkgdata_DATA = ground.png sky.png tile10.png tile16.png tile192.png tile193.png tile194.png tile195.png tile196.png tile197.png tile1.png tile2.png tile32.png tile33.png tile34.png tile35.png tile36.png tile37.png tile3.png music.mod.tag track.trk
EXTRA_DIST = $(pkgdata_DATA)

