pkgdatadir = $(datadir)/games/@PACKAGE@/tracks/desert
pkgdata_DATA = ground.png sky.png tile01.png tile02.png tile03.png tile04.png tile08.png tile09.png tile10.png tile11.png tile16.png tile1.png tile24.png tile25.png tile26.png tile27.png tile2.png tile32.png tile33.png tile3.png tile4.png tile8.png tile9.png music.mod.tag track.trk
EXTRA_DIST = $(pkgdata_DATA)
